Fixes image spacing

--- a/_sass/pages/post.sass
+++ b/_sass/pages/post.sass
@@ -45,7 +45,7 @@
         max-height: 250px
         display: block
         margin: 0 auto
-        margin-top: 16px;
+        margin-top: 25px;
 
     > .blog-navigation
         font-size: 1.4rem
